refactor(home): remove over-engineered CQRS and simplify services